# bezosProject

./: README.md
milestones_project_Farjana/: Dockerfile  Makefile  README.md  pyproject.toml
milestones_project_Farjana/src/milestones/: __init__.py  __main__.py  api.py  models.py  parse.py  store.py
milestones_project_Farjana/src/milestones.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
milestones_project_Farjana/tests/: test_api.py  test_parse_and_store.py
